# codexbar-linux-sidebar

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md
cli/: Cargo.toml
cli/src/: main.rs
daemon/: Cargo.toml
daemon/src/: config.rs  lib.rs  main.rs  schema.rs  state_writer.rs
daemon/src/codexbar/: command.rs  cost.rs  mod.rs  usage.rs
daemon/src/normalize/: mod.rs  platform.rs  provider.rs
daemon/tests/: integration.rs
docs/: II-INTEGRATION.md  SYSTEM-INSTALL.md
examples/: config.example.toml  state.mock.json
packaging/: PKGBUILD
quickshell/: shell.qml
quickshell-integration/ii/: CodexBar.qml
quickshell/widgets/: ProviderCard.qml  StatusBadge.qml  UsageBar.qml  qmldir
scripts/: backup-system-state.sh  codexbar-sidebar  e2e-smoke.sh  fetch-codexbar-cli.sh  install-hypr-hooks.sh  install-ii-integration.sh  install.sh  rollback-system-state.sh  setup-system.sh  watch-health.sh
systemd/: codexbar-sidebard.service
