[package]
name = "codexbar-sidebarctl"
version = "0.1.0"
edition = "2021"
description = "CLI control tool for the CodexBar Linux sidebar daemon"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
anyhow = "1"
serde_json = "1"
shellexpand = "3"
libc = "0.2"
