[package]
name = "codexbar-sidebard"
version = "0.1.0"
edition = "2021"
description = "Daemon that polls CodexBar CLI and writes normalized state for the Quickshell sidebar"

[lib]
name = "codexbar_sidebard"
path = "src/lib.rs"

[[bin]]
name = "codexbar-sidebard"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3"
serde_json = "1"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
fs2 = "0.4"
shellexpand = "3"
dirs = "6"
